<resources>
    <string name="app_name" translatable="false">Company Segment</string>
    <string name="txt_segmentCompany">Segment of Company</string>
    <string name="txt_segmentExplanation">Confirm the Segment your company operates in so we can customize your experience in your app</string>
    <string name="label_segmentSelected">Selected Segmenet:</string>
    <string name="txt_back">Back</string>
    <string name="btn_finishRegister">Finish Register</string>
    <string name="txt_exampleSegment" translatable="false">Ex: Restaurante</string>
    <string name="txt_editSegment">Edit Segment Selected</string>
    <string name="txt_descriptionIconCompany">Icon of Store Mall</string>
    <string name="txt_selectSegment">Select a Segment above</string>
    <string name="txt_errorAPI">An error occurred while fetching external data</string>
    <string name="txt_otherSegment">Other Segment…</string>
    <string name="txt_merchantID">Merchant Category Code: %s</string>
    <string name="txt_segmentID">ID of Segment: %s</string>
    <string name="txt_mccName">Merchant Category Selected: %s</string>
    <string name="txt_titleRefres">Restart APP</string>
    <string name="txt_messageRefres">Do you want to run the APP again?</string>
    <string name="txt_start">Restart</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_finishRegister">User registered successfully !!!</string>
</resources>